# rovot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  rovot-daemon.spec  vercel.json
.github/workflows/: ci.yml
desktop/: electron-builder.yml  entitlements.mac.plist  main.js  package-lock.json  package.json  preload.js
desktop/renderer/: index.html  renderer.js  style.css
desktop/scripts/: build-backend.ps1  build-backend.sh  install-launch-agent.sh  install-service.ps1  notarize.js
src/rovot/: __init__.py  __main__.py  audit.py  cli.py  config.py  internal_model.py  secrets.py  utils_paths.py
src/rovot/agent/: context.py  loop.py  memory.py  sessions.py
src/rovot/agent/tools/: builtin_browser.py  builtin_email.py  builtin_exec.py  builtin_fs.py  builtin_macos.py  builtin_mcp.py  builtin_memory.py  builtin_web.py  filesystem.py  registry.py  shell.py  web.py
src/rovot/channels/: __init__.py  base.py  signal_cli.py  whatsapp_twilio.py
src/rovot/connectors/: base.py  browser.py  calendar_local.py  email_imap_smtp.py  filesystem.py  loader.py  mcp_client.py  messaging_local.py
src/rovot/isolation/: workspace.py
src/rovot/policy/: approvals.py  engine.py  scopes.py
src/rovot/providers/: __init__.py  base.py  internal.py  openai_compat.py  router.py
src/rovot/server/: app.py  deps.py  ws.py
src/rovot/server/routes/: approvals.py  audit.py  channels.py  chat.py  config.py  health.py  mcp.py  memory.py  models.py  models_internal.py  tools.py  voice.py
src/rovot/state/: memory.py  sessions.py
tests/: test_api_contract_smoke.py  test_approvals.py  test_auth_token_bootstrap.py  test_channels.py  test_chat_stream.py  test_config_route.py  test_models_internal.py  test_openai_tool_args.py  test_paths.py  test_phase4.py  test_policy_scopes.py  test_provider_router.py  test_secret_access_by_mode.py  test_secrets_store.py  test_streaming.py
