[project]
name = "rovot"
version = "0.1.0"
description = "Local-first personal AI agent desktop app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
llm = [
    "litellm",
]

[project.scripts]
rovot = "rovot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rovot"]

[tool.ruff]
target-version = "py311"
line-length = 100
